# fs_browser

./: CMakeLists.txt  README.md  main.cpp
include/: browser.h  list_browser.h  mainwindow.h  searcher.h  tree_browser.h
interface/: browser.ui
src/: browser.cpp  list_browser.cpp  mainwindow.cpp  searcher.cpp  tree_browser.cpp
